--- a/GraphicalCoreInterp/WebContent/index.html
+++ b/GraphicalCoreInterp/WebContent/index.html
@@ -5,16 +5,31 @@
 <title>Core Interpreter</title>
 </head>
 <body>
-	<form method="post" action="/Interpreter">
+	<form method="post" action="Interpreter">
 		<Section>
 			<h1>Core Interpreter</h1>
 			<p>Enter your program in the input text area and click "Run" to the the programs output.</p>
 			<label for="prog"><b>Input:</b></label>
 			<br>
-			<textarea rows="5" cols="50" id="prog" name="prog">Program</textarea>
+			<textarea rows="10" cols="25" id="prog" name="prog">program
+      int x, y, z; 
+begin 
+      input x, y;
+      z:= x + y;      
+output 
+      z;
+end</textarea>
+			<br><br>
+			<label for="data"><b>Data:</b></label>
 			<br>
-			<input type="submit" name="Run">
+			<textarea rows="3" cols="25" id="data" name="data">5 6 7</textarea>
+			<br><br>
+			<input type="submit" value="Run">
 		</Section>
+		<section>
+		<p><b>Output:</b></p>
+		<br>
+		</section>
 	</form>
 </body>
 </html>
